--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
@@ -38,7 +39,7 @@
                 Excepteur sint occaecat cupidatat non.
             </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
 
     <footer class="rodape">
